--- a/assets/stylesheet/index.css
+++ b/assets/stylesheet/index.css
@@ -44,6 +44,7 @@ h1,h2,h3,h4,h5,h6 {
     z-index: 1;
     background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
     display: flex;
     justify-content: center;
     align-items: center;
